--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -1,6 +1,9 @@
 .header {
   border-bottom: 1px solid rgb(84,84,84,.7);
   padding-bottom: 41px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 @media screen and (max-width: 767.5px) {
