--- a/src/index.css
+++ b/src/index.css
@@ -6,10 +6,13 @@
 @import url(./blocks/body/body.css);
 @import url(./blocks/body/__header/body__header.css);
 @import url(./blocks/body/__footer/body__footer.css);
+@import url(./blocks/body/__auth-form/body__auth-form.css);
+
 
 /*header*/
 @import url(./blocks/header/header.css);
 @import url(./blocks/header/__logo/header__logo.css);
+@import url(./blocks/header/__action/header__action.css);
 
 /*main*/
 @import url(./blocks/main/__profile/main__profile.css);
@@ -36,6 +39,7 @@
 @import url(./blocks/popup/__figcaption/popup__figcaption.css);
 @import url(./blocks/popup/_type/_delete/popup_type_delete.css);
 @import url(./blocks/popup/_type/_edit-avatar/popup_type_edit-avatar.css);
+@import url(./blocks/popup/_type/_image-tooltip/popup_image-tooltip.css);
 @import url(./blocks/popup/__delete-question/popup__delete-question.css);
 @import url(./blocks/popup/__close-button/_active/popup__close-button_active.css);
 
@@ -69,3 +73,19 @@
 
 /*template*/
 @import url(./blocks/template/template.css);
+
+/*auth-form-container*/
+@import url(./blocks/auth-form-container/auth-form-container.css);
+
+/*auth-form*/
+@import url(./blocks/auth-form/auth-form.css);
+@import url(./blocks/auth-form/__title/auth-form__title.css);
+@import url(./blocks/auth-form/__input/auth-form__input.css);
+/* @import url(./blocks/auth-form/__email/auth-form__email.css);
+@import url(./blocks/auth-form/__password/auth-form__password.css); */
+@import url(./blocks/auth-form/__confirm/auth-form__confirm.css);
+
+/*tooltip*/
+@import url(./blocks/tooltip/tooltip.css);
+@import url(./blocks/tooltip/__img/tooltip__img.css);
+@import url(./blocks/tooltip/__caption/tooltip__caption.css);
