--- a/src/blocks/header/__action/header__action.css
+++ b/src/blocks/header/__action/header__action.css
@@ -7,3 +7,9 @@
   line-height: 1.2;
   color: #fff;
 }
+
+@media screen and (max-width: 767.5px) {
+  .header__action {
+    font-size: 14px;
+  }
+}
