--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -4,13 +4,15 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: baseline;
 }
 
 @media screen and (max-width: 767.5px) {
   .header {
-    width: 100%;
-    padding: 0 0 31.6px 27px;
+    /* width: 100%; */
+    padding: 28px 30px 31.6px;
     box-sizing: border-box;
+    align-items: baseline;
   }
 }
 
